--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                                         <input type="text" name="post" id="post" class="form-control" placeholder="Write Something...">
                                     </div>
                                     <div class="d-grid">
-                                        <button type="submit" class="btn btn-primary fw-bold"> Submit Post</button>
+                                        <button type="submit" class="btn btn-primary fw-bold text-uppercase py-2">Submit post</button>
                                     </div>
                                 </form>
                                 </div>
@@ -686,6 +686,7 @@
 
     <!-- Chartjs 1 -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 
 
     <!--custom js 1-->
