--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                                     <div class="from-group">
                                         <input type="text" name="post" id="post" class="form-control" placeholder="Write Something...">
                                     </div>
-                                    <div class="d-grid">
+                                    <div class="d-grid mt-3">
                                         <button type="submit" class="btn btn-primary fw-bold text-uppercase py-2">Submit post</button>
                                     </div>
                                 </form>
